# Luna-Viewer

./: .gitignore  CHANGELOG.txt  Cleanup.sh  LICENSE-source.txt  LuaFix_Shyotl-Kuhr.diff  NOT_TPV_COMPLIANT.txt  README  README.md  README.txt  ReformatInstall.xml.bat  bot_build.sh  clean.bat  cleanall.bat  flexlifelogo.xcf  install.xml  installed.xml  lslobf.lua  macbuild.sh  megaprim-create.patch  prebuild-vc71.bat  prebuild-vc80.bat  prep-fmod.bat  propset.sh  svn-commit.tmp  winSWIG.bat
LICENSES/: libpng.txt  libstdc++.txt  llmozlib.txt
doc/: FLOSS-exception.txt  asset_urls.txt  contributions.txt  flexlife.htm  license.htm  luna-contributors.txt  shoopedlife.htm
etc/: message.xml
indra/emerald/: CMakeLists.txt  Makefile  cmake_install.cmake  dhparam.cpp  dsaparam.cpp  emerald.cpp  emerald.h
indra/gtests/: CMakeLists.txt  main.cpp
indra/libgcrypt/: CMakeLists.txt
indra/libgcrypt/libgcrypt-1.2.2/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.SVN  README.apichanges  THANKS  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  ltmain.sh
indra/libgcrypt/libgcrypt-1.2.2/cipher/: ChangeLog  Makefile.am  Makefile.in  Manifest  ac.c  arcfour.c  blowfish.c  cast5.c  cipher.c  crc.c  des.c  dsa.c  elgamal.c  md.c  md4.c  md5.c  primegen.c  pubkey.c  random.c  rfc2268.c  rijndael.c  rmd160.c  rndegd.c  rndlinux.c  rndunix.c  rndw32.c  rsa.c  serpent.c  sha1.c  sha256.c  sha512.c  tiger.c  twofish.c
indra/libgcrypt/libgcrypt-1.2.2/doc/: ChangeLog  Makefile.am  Makefile.in  gcrypt.info  gcrypt.texi  gpl.texi  lgpl.texi  mdate-sh  texinfo.tex  version.texi
indra/libgcrypt/libgcrypt-1.2.2/m4/: libtool.m4
indra/libgcrypt/libgcrypt-1.2.2/mpi/: ChangeLog  Makefile.am  Makefile.in  Manifest  config.links  mpi-add.c  mpi-bit.c  mpi-cmp.c  mpi-div.c  mpi-gcd.c  mpi-inline.c  mpi-inv.c  mpi-mpow.c  mpi-mul.c  mpi-pow.c  mpi-scan.c  mpicoder.c  mpih-div.c  mpih-mul.c  mpiutil.c
indra/libgcrypt/libgcrypt-1.2.2/mpi/alpha/: README  distfiles  mpih-add1.S  mpih-lshift.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-rshift.S  mpih-sub1.S  udiv-qrnnd.S
indra/libgcrypt/libgcrypt-1.2.2/mpi/generic/: Manifest  distfiles  mpih-add1.c  mpih-lshift.c  mpih-mul1.c  mpih-mul2.c  mpih-mul3.c  mpih-rshift.c  mpih-sub1.c  udiv-w-sdiv.c
indra/libgcrypt/libgcrypt-1.2.2/mpi/hppa/: README  distfiles  mpih-add1.S  mpih-lshift.S  mpih-rshift.S  mpih-sub1.S  udiv-qrnnd.S
indra/libgcrypt/libgcrypt-1.2.2/mpi/hppa1.1/: distfiles  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  udiv-qrnnd.S
indra/libgcrypt/libgcrypt-1.2.2/mpi/i386/: Manifest  distfiles  mpih-add1.S  mpih-lshift.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-rshift.S  mpih-sub1.S
indra/libgcrypt/libgcrypt-1.2.2/mpi/i586/: Manifest  README  distfiles  mpih-add1.S  mpih-lshift.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-rshift.S  mpih-sub1.S
indra/libgcrypt/libgcrypt-1.2.2/mpi/m68k/: Manifest  distfiles  mpih-add1.S  mpih-lshift.S  mpih-rshift.S  mpih-sub1.S
indra/libgcrypt/libgcrypt-1.2.2/mpi/m68k/mc68020/: Manifest  distfiles  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S
indra/libgcrypt/libgcrypt-1.2.2/mpi/mips3/: Manifest  README  distfiles  mpih-add1.S  mpih-lshift.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-rshift.S  mpih-sub1.S
indra/libgcrypt/libgcrypt-1.2.2/mpi/pa7100/: Manifest  distfiles  mpih-lshift.S  mpih-rshift.S
indra/libgcrypt/libgcrypt-1.2.2/mpi/power/: Manifest  distfiles  mpih-add1.S  mpih-lshift.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-rshift.S  mpih-sub1.S
indra/libgcrypt/libgcrypt-1.2.2/mpi/powerpc32/: Manifest  distfiles  mpih-add1.S  mpih-lshift.S  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S  mpih-rshift.S  mpih-sub1.S
indra/libgcrypt/libgcrypt-1.2.2/mpi/sparc32/: Manifest  distfiles  mpih-add1.S  mpih-lshift.S  mpih-rshift.S  udiv.S
indra/libgcrypt/libgcrypt-1.2.2/mpi/sparc32v8/: Manifest  distfiles  mpih-mul1.S  mpih-mul2.S  mpih-mul3.S
indra/libgcrypt/libgcrypt-1.2.2/mpi/supersparc/: Manifest  distfiles  udiv.S
indra/libgcrypt/libgcrypt-1.2.2/src/: ChangeLog  Makefile.am  Makefile.in  Manifest  ath.c  gcrypt.h  global.c  libgcrypt-config.in  libgcrypt.m4  libgcrypt.vers  misc.c  missing-string.c  module.c  mpi.h  secmem.c  sexp.c  stdmem.c
indra/libgcrypt/libgcrypt-1.2.2/tests/: ChangeLog  Makefile.am  Makefile.in  ac.c  basic.c  benchmark.c  keygen.c  prime.c  pubkey.c  random.c  register.c  testapi.c  tsexp.c
indra/libgcrypt/libgcrypt-1.2.2/w32-dll/: ChangeLog  Makefile.am  Makefile.in
indra/libgpg-error/: CMakeLists.txt
indra/libgpg-error/libgpg-error-1.0/: Makefile.in
indra/libgpg-error/libgpg-error-1.0/src/: strerror.c
indra/libopenjpeg2/: CMakeLists.txt  README.phoenix  openjpeg.h
indra/libotr/: CMakeLists.txt
indra/libotr/libotr-3.2.0/: Makefile  config.h  config.status  libotr.pc  libtool
indra/libotr/libotr-3.2.0/src/: Makefile  auth.c  context.c  context.h  message.c  privkey.c  proto.c  proto.h  sm.c
indra/libotr/libotr-3.2.0/src/.deps/: auth.Plo  b64.Plo  context.Plo  dh.Plo  mem.Plo  message.Plo  privkey.Plo  proto.Plo  sm.Plo  tlv.Plo  userstate.Plo
indra/libotr/libotr-3.2.0/toolkit/: Makefile  otr_mackey  otr_modify  otr_parse  otr_readforge  otr_remac  otr_sesskeys
indra/libotr/libotr-3.2.0/toolkit/.deps/: aes.Po  ctrmode.Po  otr_mackey.Po  otr_modify.Po  otr_parse.Po  otr_readforge.Po  otr_remac.Po  otr_sesskeys.Po  parse.Po  readotr.Po  sesskeys.Po  sha1hmac.Po
indra/llaudio/: CMakeLists.txt  Makefile  audioengine.cpp  audioengine.h  audioengine_fmod.cpp  audioengine_fmod.h  audioengine_openal.cpp  audioengine_openal.h  cmake_install.cmake  files.lst  listener.cpp  listener.h  listener_ds3d.h  listener_fmod.cpp  listener_fmod.h  listener_openal.cpp  listener_openal.h  llaudio_vc8.vcproj  llaudiodecodemgr.cpp  llaudiodecodemgr.h  llaudioengine.cpp  llaudioengine.h  llaudioengine_fmod.cpp  llaudioengine_fmod.h  lllistener_fmod.cpp  llstreamingaudio.h  llstreamingaudio_fmod.cpp  llstreamingaudio_fmod.h  vorbisdecode.cpp  vorbisdecode.h  vorbisencode.cpp  vorbisencode.h  windgen.h
indra/lua/: CMakeLists.txt
(+3233 files in other folders)
